# problems-and-patterns

./: .gitignore  Cargo.toml  Claude.md  Makefile  README.md  Specification.md  go.mod  package-lock.json  package.json  real-world-applications.json  tsconfig.json  vitest.config.ts
problems/arrays-hashing/contains-duplicate/: Cargo.toml  metadata.json  problem.md  solution.go  solution.rs  solution.test.ts  solution.ts  solution_test.go
problems/arrays-hashing/encode-and-decode-strings/: Cargo.toml  metadata.json  problem.md  solution.go  solution.rs  solution.test.ts  solution.ts  solution_test.go
problems/arrays-hashing/group-anagrams/: Cargo.toml  metadata.json  problem.md  solution.go  solution.rs  solution.test.ts  solution.ts  solution_test.go
problems/arrays-hashing/longest-consecutive-sequence/: Cargo.toml  metadata.json  problem.md  solution.go  solution.rs  solution.test.ts  solution.ts  solution_test.go
problems/arrays-hashing/product-of-array-except-self/: Cargo.toml  metadata.json  problem.md  solution.go  solution.rs  solution.test.ts  solution.ts  solution_test.go
problems/arrays-hashing/topK-frequent-elements/: Cargo.toml  metadata.json  problem.md  solution.go  solution.rs  solution.test.ts  solution.ts  solution_test.go
problems/arrays-hashing/two-sum/: Cargo.toml  metadata.json  problem.md  solution.go  solution.rs  solution.test.ts  solution.ts  solution_test.go
problems/arrays-hashing/valid-anagram/: Cargo.toml  metadata.json  problem.md  solution.go  (+4 more)
scripts/: populate-real-world-apps.py
templates/: cargo.template.toml  metadata.template.json  problem.template.md  quiz-generation.template.json  solution.template.go  solution.template.rs  solution.template.ts  solution.test.template.ts  solution_test.template.go
(+8 files in other folders)
