[workspace]
resolver = "2"
members = [
  "problems/arrays-hashing/contains-duplicate",
  "problems/arrays-hashing/valid-anagram",
  "problems/arrays-hashing/two-sum",
  "problems/arrays-hashing/group-anagrams",
  "problems/arrays-hashing/topK-frequent-elements",
  "problems/arrays-hashing/encode-and-decode-strings",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = []
license = "MIT"

[workspace.dependencies]
# Common dependencies can be defined here and used by all workspace members
